Cleaning up javadoc and compiler warnings